Staging and working on the company generator